--- a/app.json
+++ b/app.json
@@ -10,8 +10,8 @@
     "nl": "Leest data van de Plugwise Smile P1 energie meter"
   },
 
-  "version": "0.9.13",
-  "compatibility": ">=0.9.x || 1.x",
+  "version": "0.9.14",
+  "compatibility": ">=0.10.0 || 1.x",
   "author": {
     "name": "Gruijter",
     "email": "gruijter@hotmail.com"
@@ -94,8 +94,22 @@
             ],
             "options": {
               "icons": {
-                  "measure_gas": "./drivers/smilep1/assets/images/gas_icon.svg",
-                  "meter_offPeak": "./drivers/smilep1/assets/images/offPeak_icon.svg"
+                "measure_gas": "./drivers/smilep1/assets/images/gas_icon.svg",
+                "meter_offPeak": "./drivers/smilep1/assets/images/offPeak_icon.svg"
+              },
+              "meter_offPeak":{
+                "noblink": true,
+                "invert": false,
+                "label": {
+                  "true": {
+                    "en": "true",
+                    "nl": "ja"
+                  },
+                  "false": {
+                    "en": "false",
+                    "nl": "nee"
+                  }
+                }
               }
             }
           }
