--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "nl": "Leest data van de Plugwise Smile P1 energie meter"
   },
 
-  "version": "1.0.1",
+  "version": "1.1.0",
   "compatibility": ">= 1.x",
   "author": {
     "name": "Gruijter",
@@ -22,7 +22,7 @@
     "small": "./assets/images/small.jpg"
   },
 
-  "category": ["tools","climate","energy"],
+  "category": ["tools","appliances", "energy"],
 
   "capabilities": {
     "meter_offPeak": {
