Added EAN barcode
See https://developers.athom.com/library/drivers/

--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
   },
 
   "category": ["tools","appliances", "energy"],
-
+  "gtin": ["8718469270064"],
   "capabilities": {
     "meter_offPeak": {
       "type": "boolean",
