Homey V2 icons and insights. Ledring fix. Memory optimizations. New forum link.

--- a/app.json
+++ b/app.json
@@ -10,22 +10,26 @@
     "nl": "Leest data van de Plugwise Smile P1 energie meter"
   },
 
-  "version": "2.0.4",
+  "version": "2.1.0",
 	"sdk": 2,
   "compatibility": ">= 1.5",
   "author": {
-    "name": "Robin de Gruijter",
+    "name": "Robin Gruijter",
     "email": "gruijter@hotmail.com"
   },
-	"copyright": "Robin de Gruijter (gruijter@hotmail.com)",
-	"license": " GPL-3.0-or-later",
-	"contributing": {
-		"donate": {
-			"paypal": {
-				"username": "gruijter"
-			}
-		}
-	},
+  "copyright": "Robin de Gruijter (gruijter@hotmail.com)",
+  "license": " GPL-3.0-or-later",
+  "contributing": {
+    "donate": {
+      "paypal": {
+        "username": "gruijter"
+      }
+    }
+  },
+  "bugs": {
+    "url": "https://github.com/gruijter/com.plugwise.smile/issues"
+  },
+  "homeyCommunityTopicId": 8012,
 
   "images": {
     "large": "./assets/images/large.jpg",
@@ -46,7 +50,9 @@
         "nl": "Is laag tarief actief?"
       },
       "getable": true,
-      "setable": false
+      "setable": false,
+      "insights": true,
+      "icon": "./drivers/smilep1/assets/images/offPeak_icon.svg"
     },
     "measure_gas": {
       "type": "number",
@@ -63,7 +69,9 @@
         "nl": "m\u00B3"
       },
       "getable": true,
-      "setable": false
+      "setable": false,
+      "insights": true,
+      "icon": "./drivers/smilep1/assets/images/gas_icon.svg"
     }
   },
 
