--- a/app.json
+++ b/app.json
@@ -9,8 +9,11 @@
     "en": "Imports data from the Plugwise Smile P1 energy meter",
     "nl": "Leest data van de Plugwise Smile P1 energie meter"
   },
-
-  "version": "2.2.0",
+	"tags": {
+		"en": [ "dsmr", "p1", "plugwise", "smile", "power", "water", "gas" ],
+		"nl": [ "dsmr", "p1", "plugwise", "smile", "power", "water", "gas" ]
+	},
+	"version": "2.3.0",
 	"sdk": 2,
   "compatibility": ">= 1.5",
   "author": {
