--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
       "gas"
     ]
   },
-  "version": "4.0.0",
+  "version": "4.1.0",
   "sdk": 3,
   "compatibility": ">= 5.0",
   "author": {
@@ -280,6 +280,19 @@
                 "min": 10
               },
               "value": 10
+            },
+            {
+              "id": "reversed",
+              "type": "checkbox",
+              "label": {
+                "en": "Reverse P1 meters",
+                "nl": "P1 meters omdraaien"
+              },
+              "hint": {
+                "en": "Set to reversed for Belgian P1 meters",
+                "nl": "Zet op omdraaien voor Belgische P1 meters"
+              },
+              "value": false
             }
           ]
         },
