--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
       "gas"
     ]
   },
-  "version": "4.2.1",
+  "version": "4.2.2",
   "sdk": 3,
   "compatibility": ">= 5.0",
   "author": {
@@ -83,7 +83,6 @@
   "flow": {
     "triggers": [
       {
-        "id": "power_changed",
         "title": {
           "en": "Power delta",
           "nl": "Stroomverbruik delta"
@@ -114,15 +113,11 @@
             },
             "example": 18
           }
-        ]
+        ],
+        "id": "power_changed"
       },
       {
-        "id": "tariff_changed",
         "title": {
-          "en": "Tariff has changed",
-          "nl": "Tarief is gewijzigd"
-        },
-        "titleFormatted": {
           "en": "Tariff has changed",
           "nl": "Tarief is gewijzigd"
         },
@@ -131,10 +126,10 @@
             "name": "tariff",
             "type": "boolean",
             "title": {
-              "en": "off-peak",
+              "en": "off peak",
               "nl": "dal"
             },
-            "example": false
+            "example": true
           }
         ],
         "args": [
@@ -143,12 +138,12 @@
             "name": "device",
             "filter": "driver_id=smilep1"
           }
-        ]
+        ],
+        "id": "tariff_changed"
       }
     ],
     "conditions": [
       {
-        "id": "is_offPeak",
         "title": {
           "en": "Tariff !{{is|isn't}} off peak",
           "nl": "Tarief !{{is|is niet}} dal"
@@ -163,7 +158,8 @@
             "name": "device",
             "filter": "driver_id=smilep1"
           }
-        ]
+        ],
+        "id": "is_offPeak"
       }
     ]
   },
